First commited as before_48075_rev2